hermes_fuzz_executed_few_shot_v2/fuzz_81_execution
'use strict';
var original = (function () {
    return f(15, 10, 60);
});
(function () {
    original.toString = function () {
        return super.toString;
    };
})();
'use strict';
var original = (function () {
    return f(15, 10, 60);
});
original.toString = null;  
'use strict';
var original = (function () {
    return f(15, 10, 60);
});
original.toString = null;  
'use strict';
console.log(original());

```

## FAQ
**Q: When is Hermes enabled by default?**

A: Enabled by default to the same as JSCore.

*Note: For RN 0.42+ only, disabled by default will use the native ECMAScript interpreter instead of Hermes.*

**Q: Will Hermes be stable (completely) from SDK versions v1650 or later?**

A: Hermes is fully supported on iOS 9+, it will remain fully stable on Android and Web but may be subject to minor breaking changes. We'll announce once in a while, but until then, please use the stable Hermes from the latest sdk, we're also working on the current version for better support.

**Q: Do I need a separate project to use Hermes?**

A: No, you do not need to do. If you'd like to use Hermes on web, you should use RN, which is the platform-independent runtime with the latest JS features and native code. If you're feeling adventurous, you can use Hermes to transpile your web app to React Native. We'll publish a demo web app on the web in 0.43.0, but we're not sure exactly when this feature will be available in RNW. The React Native team is experimenting with web support for Hermes for a future feature.

**Q: How to use Hermes with native code?**

A: Please use the bundled Hermes or your own generated JS. For native apps, you might want to use Hermes. We will publish a sample web app for RN 0.43.0.

## FAQ (Android)

**Q: How do I access native application (non React Native) components?**

A: Please refer to the [android documentation here](https: 

Execution Output ------------------:
test.js:48:60: error: non-terminated template literal
A: Please refer to the [android documentation here](https: 
                                                           ^
test.js:23:3: note: template literal started here
```
  ^
test.js:48:60: error: invalid expression
A: Please refer to the [android documentation here](https: 
                                                           ^
